<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
        <string name="welcome_in_app">Socia!</string>
        <string name="txt_login_facebook">Masuk dengan Facebook</string>
        <string name="txt_sign_in">Gabung</string>
        <string name="txt_sign_up">Daftar</string>
        <string name="txt_skip_login">Lewati login</string>
        <string name="login_required">Silahkan masuk untuk mengakses halaman ini.</string>
        <string name="email_id">ID Email</string>
        <string name="forgot_password">Tidak ingat kata sandi ?</string>
        <string name="password">Kata sandi</string>
        <string name="invalid_email_format">format email salah</string>
        <string name="invalid_password">Lapangan kosong</string>
        <string name="txt_lost_password">kehilangan Kata sandi</string>
        <string name="txt_submit">Kirim</string>
        <string name="txt_terms">Ketentuan</string>
        <string name="txt_conitnue">Melanjutkan</string>
        <string name="text_no_users">Tidak ada pengguna</string>
        <string name="msg_no_group_created_cat">Belum ada yang membuat grup dalam kategori ini.</string>
        <string name="carrier_object"><![CDATA[Career Objective, Date & Place & Declaration]]></string>
        <string name="skillstab"><![CDATA[Skills, Interests, Hobbies & Strength]]></string>
            <plurals name="view_more_reply_count">
                <item quantity="one">View <b>%d</b> more reply</item>
                <item quantity="other">View <b>%d</b> more replies</item>
            </plurals>
        <string name="turn_on_gps">Nyalakan GPS</string>
        <string name="on">PADA</string>
        <string name="gps_enabled">GPS diaktifkan</string>
        <string name="gps_disabled">GPS dinonaktifkan</string>
        <string name="unable_to_get_location">Tidak bisa mendapatkan lokasi Anda</string>
        <string name="txt_choose_photo">Pilih foto</string>
        <string name="txt_upload_choose_photo">Mengunggah foto</string>
        <string name="txt_add_photo">Tambahkan foto Anda</string>
        <string name="txt_save_photo">Menyimpan foto</string>
        <string name="camera">Kamera</string>
        <string name="gallary">Galeri</string>
        <string name="MSG_NO_MEMBER_SELECTED">Tidak ada anggota yang dipilih</string>
        <string name="guest">Tamu</string>
        <string name="add_friend">Tambah teman</string>
        <string name="ignore">Mengabaikan</string>
        <string name="txt_no_friend_request">Anda tidak memiliki permintaan pertemanan yang tertunda.</string>
        <string name="refresh">Menyegarkan</string>
        <string name="compose">Menyusun</string>
        <string name="txt_compose">Menulis pesan</string>
        <string name="subject">Subjek</string>
        <string name="send_to">Kirim ke</string>
        <string name="friend_name">Nama Teman</string>
        <string name="points">Poin</string>
        <string name="send_in_message">Kirim pesan</string>
        <string name="body">Tubuh</string>
        <string name="image">Gambar</string>
        <string name="video">Video</string>
        <string name="link">Tautan</string>
        <string name="attach">Menempel</string>
        <string name="remove">Menghapus</string>
        <string name="txt_post_something">Tulis sesuatu…</string>
        <string name="txt_whats_new">Apa yang terjadi?</string>
        <string name="txt_share_something">Apa yang ingin Anda bagikan?</string>
        <string name="photo">Foto</string>
        <string name="like">Suka</string>
        <string name="comment">Komentar</string>
        <string name="share">Bagikan</string>
        <string name="share_now">Bagikan sekarang</string>
        <string name="title_desc5"><![CDATA[This screen is very great & gives you the totally realistic feel of watching.]]></string>
        <string name="txt_entry_start_end_date"><![CDATA[Entry Submission Start & End Date]]></string>
        <string name="txt_when_n_where"><![CDATA[When & Where]]></string>
        <string name="mark_sold">Tandai sebagai dijual</string>
        <string name="sold_out">TERJUAL HABIS</string>
        <string name="sold_bottom_text">Pesan penjual ini untuk bertanya tentang produk</string>
        <string name="preview">Pratinjau</string>
        <string name="txt_undo_1">Anda tidak akan melihat tulisan ini lagi disini.</string>
        <string name="txt_undo_2">Membuka</string>
        <string name="txt_report">Laporan</string>
        <string name="txt_enter_here">Tulis komen…</string>
        <string name="txt_write_msg">"Menulis pesan…"</string>
        <string name="post">Kirim</string>
        <string name="create_post">Buat Tulisan</string>
        <string name="no_feed_data">Belum ada yang diposting di sini - jadilah yang pertama!</string>
        <string name="privacy">Pribadi</string>
        <string name="privacy_everyone">Setiap orang</string>
        <string name="privacy_only_me">Hanya saya</string>
        <string name="privacy_friends_only">Teman saja</string>
        <string name="txt_privacy2"><![CDATA[ Privacy]]></string>
        <string name="select_privacy">Pilih Yang Bisa Lihat</string>
        <string name="what_r_u_selling">Apa yang kamu jual?</string>
        <string name="price_dollar">Harga ($)</string>
        <string name="description_optional">Deskripsi (opsional)</string>
        <string name="location_optional">Lokasi (opsional)</string>
        <string name="location_text">Lokasi</string>
        <string name="slide_down">Meluncur ke bawah</string>
        <string name="txt_how_feel">Bagaimana perasaanmu?</string>
        <string name="feeling">Perasaan</string>
        <string name="stickers">Stiker</string>
        <string name="activities">Kegiatan</string>
        <string name="search">Mencari</string>
        <string name="no_feelings">Tidak ada perasaan yang ditemukan dengan pencarian yang diberikan.</string>
        <string name="txt_tag_people">Tandai orang</string>
        <string name="no_comment">Belum ada komentar.</string>
        <string name="no_">Tidak</string>
        <string name="delete">Menghapus</string>
        <string name="name">Nama</string>
        <string name="email">Surel</string>
        <string name="websitest">Situs web</string>
        <string name="message">Pesan</string>
        <string name="message_optional">pesan (pilihan)</string>
        <string name="txt_contact_us">Hubungi kami</string>
        <string name="no_settings">Tidak ada pengaturan yang tersedia.</string>
        <string name="value_with_count"><b>%1$s</b> <b>%2$s</b></string>
        <string name="no_network_1">Saat ini tidak ada jaringan yang tersedia untuk bergabung.</string>
        <string name="hint_search_song">Cari lagu</string>
        <string name="hint_search_product">Cari produk</string>
        <string name="hint_search_store">Cari toko</string>
        <string name="lyrics">\ uf0f6 \ n lirik</string>
        <string name="clear_queue">\ uf014 \ n antrian bening</string>
        <string name="playlists">Daftar putar</string>
        <string name="albums">Foto Album</string>
        <string name="txt_vote_start_end_date"><![CDATA[Voting Start & End Date]]></string>
        <string name="favorite">Favorit</string>
           <string name="on_date">on <b>%1$s</b></string>
                <string name="by_owner">by <b>%1$s</b></string>
            <string name="vote_percent_with_count">%1$s %% (%2$d Votes)</string>
            <string name="by_owner_in_category">by <b>%1$s</b> in <b>%2$s</b></string>
            <string name="by_owner_in_category1"><b>%1$s</b></string>
            <string name="by_owner_in_category2"> <b>%1$s</b></string>
            <string name="for_owner_about_time">for <b>%1$s</b> about <b>%2$s</b></string>
        <string name="artist">Artis</string>
        <string name="category">Kategori</string>
        <string name="lyrics_">Lirik</string>
        <string name="txt_contest_start_end_date"><![CDATA[Contest Start & End Date]]></string>
        <string name="description">Keterangan</string>
        <string name="watch_later">Lihat nanti</string>
        <string name="videos">Video</string>
        <string name="videos_213">Video</string>
        <string name="channels">Saluran</string>
        <string name="add_to">Tambahkan</string>
        <string name="txt_rating_1">Apakah aplikasi ini bermanfaat untuk Anda?</string>
        <string name="txt_rating_2">Nilai Matani.ID di Google Play</string>
        <string name="txt_rating_3">Ingatkan Saya Nanti</string>
        <string name="txt_rated_already">Anda sudah menilai konten ini</string>
        <string name="edit_profile">Edit profil saya</string>
        <string name="cancel">Membatalkan</string>
        <string name="save">Menyimpan</string>
        <string name="edit_description">Edit deskripsi</string>
        <string name="friends">Saya Ikuti</string>
        <string name="clear">Jernih</string>
        <string name="add_to_playlist">Tambahkan ke Daftar Putar</string>
        <string name="go_to_song">Pergi ke lagu</string>
        <string name="go_to_album">Pergi ke album</string>
        <string name="go_to_artist">Pergi ke artis</string>
        <string name="txt_mention_people">Sebutkan orang</string>
        <string name="text_category">"Kategori"</string>
        <string name="text_sub_category">"Sub Kategori"</string>
        <string name="text_sub_sub_category">"Sub Sub Kategori"</string>
        <string name="text_tags">Tag</string>
        <string name="text_Description">Keterangan :</string>
        <string name="loading_video">Memuat video…</string>
        <string name="Option">pilihan</string>
        <string name="education_arts"><![CDATA[Education & Arts (7)]]></string>
         <string name="fashion_beauty"><![CDATA[Fashion & Beauty]]></string>
        <string name="MSG_NO_RESULT">Tidak ada hasil yang ditemukan</string>
        <string name="MSG_NO_ARTICLE">Tidak ada yang memposting artikel dengan kriteria ini.</string>
        <string name="MSG_NO_CATEGORIES">Tidak ada kategori yang ditemukan</string>
        <string name="MSG_NO_ALBUM_AVAILABLE">Tidak ada foto album yang tersedia</string>
        <string name="MSG_NO_SONG_SEARCH">Tidak ada lagu yang tersedia dengan pencarian yang diberikan</string>
        <string name="CANCEL">Membatalkan</string>
        <string name="TAB_TITLE_NOTIFICATION">Pemberitahuan</string>
        <string name="TAB_TITLE_HOME">Beranda</string>
        <string name="privacy_network"><![CDATA[Friends & Network]]></string>
        <string name="logging_in">Masuk ...</string>
        <string name="account_created">Akun berhasil dibuat.</string>
        <string name="requests">Permintaan</string>
        <string name="add_question">Tambahkan pertanyaan</string>
        <string name="ask_question">Ajukan pertanyaan anggota yang tertunda</string>
        <string name="ask_question_desc">Ajukan beberapa pertanyaan yang tertunda. Mereka akan memiliki hingga 250 karakter untuk menjawab masing -masing, dan hanya admin dan moderator yang akan melihat jawabannya.</string>
        <string name="activity_type">Tipe kegiatan</string>
        <string name="deduction_points">Deduksi \ nPoints</string>
        <string name="max_points">Max \ nPoints</string>
        <string name="next_time">Berikutnya</string>
        <string name="first_time">Pertama kali</string>
        <string name="saving">Penghematan</string>
        <string name="save_gallery">Simpan ke galeri</string>
        <string name="sharing">Membagikan</string>
        <string name="share_story_label">Izinkan berbagi ke cerita</string>
        <string name="share_feed_label">Izinkan berbagi ke dalam pakan</string>
        <string name="sharing_note">Jika Anda menonaktifkan kedua opsi maka Anda tidak akan dapat membagikan video Anda</string>
</resources>