<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/icon_home"
            android:title="@string/TAB_TITLE_HOME"/>

    <item
            android:id="@+id/navigation_requests"
            android:icon="@drawable/ic_friends"
            android:title="@string/requests"/>

    <item
            android:id="@+id/navigation_post"
            android:icon="@drawable/ic_plus_button"
            android:title="@string/post"/>
    <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/TAB_TITLE_NOTIFICATION"/>
</menu>
