<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_half"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        style="@style/text_style_1"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginLeft="@dimen/margin_full"
        android:layout_marginEnd="@dimen/margin_full"
        android:layout_marginRight="@dimen/margin_full"
        android:layout_weight="2"
        android:ellipsize="end"
        android:fontFamily="@string/medium_bold"
        android:maxLines="2"
        android:text="@string/activity_type"
        android:textSize="@dimen/caption" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv14"
            style="@style/text_style_1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:ellipsize="end"
            android:fontFamily="@string/medium_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/first_time"
            android:textSize="@dimen/body_1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv24"
            style="@style/text_style_1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:ellipsize="end"
            android:fontFamily="@string/medium_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/next_time"
            android:textSize="@dimen/body_1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv34"
            style="@style/text_style_1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:ellipsize="end"
            android:fontFamily="@string/medium_bold"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/item_offset"
            android:text="@string/max_points"
            android:textSize="@dimen/body_1" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv44"
            style="@style/text_style_1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:ellipsize="end"
            android:fontFamily="@string/medium_bold"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/item_offset"
            android:text="@string/deduction_points"
            android:textSize="@dimen/body_1" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>